2003-02-09  Earnie Boyd  <earnie@users.sf.net>

	* lib/ddk/ntoskrnl.def (Ke386IoSetAccessProcess): Activate export.
	(Ke386QueryToAccessMap): Ditto.
	(Ke386SetIoAccessMap): Ditto.
	Thanks to Marcel Telka <telka@users.sf.net>

2003-02-05  Earnie Boyd  <earnie@users.sf.net>

	* include/basetypes.h (_GUID_DEFINED): Add deprecation warning, start
	using GUID_DEFINED instead.
	* include/sqltypes.h: Ditto.
	* include/winnt.h: Ditto.
	* include/ddk/scsiwmi.h: Ditto.

2003-02-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlwapi.h (PathRelativePathTo[AW]): Correct
	prototypes.
	Thanks to: John Dallaway  <jld@ecoscentric.com>.

2003-02-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (TCM_*): Add missing defines.

2003-02-01  Jesus Alvarez  <jesus_alvarez@users.sourceforge.net>
	    Danny Smith  <dannysmith@users.sourceforge.net>

	* include/prsht.h (PSP_*, PSH_*): Add missing defines.
	(PROPSHEETPAGE[AW]): Add pszHeaderTitle, pszHeaderSubTitle
	for (_WIN32_IE >= 0x0400).
	(PROPSHEETHEADER[AW]): Add hplWatermark and anonymous union
	fields for (_WIN32_IE >= 0x0400).

2003-01-31  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (CreateFiber): Change first parameter
	to SIZE_T.
	(CreateJobObject[AW], CreateHardLink[AW]):Guard with
	if (_WIN32_WINNT >= 0x0500). 

2003-01-31  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winbase.h (PWIN32_FIND_DATAA, PWIN32_FIND_DATAW):
	Add missing typedefs.
	(CreateFiberEx, CreateJobObjectA,CreateJobObjectW): Add missing
	prototypes.
	(CreateHardLinkA, CreateHardLinkW): Return BOOL, not HANDLE.

2003-01-27  Krzysztof Nikiel  <kni@poczta.onet.pl>

	* include/mmsystem.h (MIXERCONTROL_CONTROLF_MULTIPLE): Correct
	define.
	* lib/largeint.c (LargeIntegerAdd): Add, don't multiply.

2003-01-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/rpcnterr.h (RPC_X_INVALID_PIPE_OPERATION): Add
	define.
	* include/winbase.h (WAIT_TIMEOUT): Guard against prior
	definition.